--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                 <div class="fill" style="background-image:url(head2.png);"></div>
+                <div class="fill" style="background-image:url(head2.png);"></div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                 <div class="fill" style="background-image:url(head3.jpg);"></div>
+                <div class="fill" style="background-image:url(head3.jpg);"></div>
             </div>
         </div>
 
@@ -60,9 +60,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <center><h1>Hong Kong Energy Consumsion</h1></center>
+                <center>
+                    <h1>Hong Kong Energy Consumsion</h1>
+                </center>
                 <div id="graph1" style="width: 100%; min-height:600px"></div>
-                
+                <p>
+                    * Energy Consumption * <br>* Energy saving is a importance issue worldwide<br> * Every country need to
+                    reduce energy use in order to reduce carbon dioxide <br>* To reduce energy consumption, understand what
+                    is the major sector to consume energy is a must <br>* energy consumption by sector * <br>* graph: legard*<br>*
+                    Major consumption: Commercial<br> * residential: thrid --> <br>* Commercial : T23 * <br>* Restaurant/Retial
+                    <br>* energy consumption by usage(end use) * <br>* Space Conditioning <br>* Lighting <br>* Save energy
+
+                </p>
             </div>
         </div>
 
