--- a/index.html
+++ b/index.html
@@ -63,14 +63,28 @@
                 <center>
                     <h1>Hong Kong Energy Consumsion</h1>
                 </center>
-                <div id="graph1" style="width: 100%; min-height:600px"></div>
-                <p>
-                    * Energy Consumption * <br>* Energy saving is a importance issue worldwide<br> * Every country need to
-                    reduce energy use in order to reduce carbon dioxide <br>* To reduce energy consumption, understand what
-                    is the major sector to consume energy is a must <br>* energy consumption by sector * <br>* graph: legard*<br>*
-                    Major consumption: Commercial<br> * residential: thrid --> <br>* Commercial : T23 * <br>* Restaurant/Retial
-                    <br>* energy consumption by usage(end use) * <br>* Space Conditioning <br>* Lighting <br>* Save energy
+                <div class="col-lg-10">
+                    <p>Energy saving is a importance issue worldwide</p>
+                    <p>Every country need to reduce energy use in order to reduce carbon dioxide, so it is also a importance
+                        issue for Hong Kong.</p>
+                    <p> To reduce energy consumption, understand what is the major sector to consume energy is a must.</p>
+                </div>
+                <div class="col-lg-12">
+                    <h2>All Energy Consumption By Sectors</h2>
+                    <div id="graph1" style="width: 100%; min-height:600px"></div>
+                </div>
+                <div class="col-lg-10">
+                    <p>From the graph, Major consumption source is Commercial within this 10 years. residiential is only the
+                        third sector.<br>As a result, other than encourage residient to reduce their energy use,maybe reduce
+                        the energy consumption of Commercial is more efficent.Laws or energy prices increasement may helps.</p>
+                </div>
+                <div class="col-lg-12">
+                    <h2>Energy consumption by usage(end use)</h2>
+                    <div id="graph2" style="width: 100%; min-height:600px"></div>
+                </div>
 
+
+                <p>Space Conditioning <br>* Lighting <br>* Save energy
                 </p>
             </div>
         </div>
@@ -81,7 +95,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Jour2106 HW5 2017</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -90,13 +104,13 @@
     </div>
     <!-- /.container -->
     <script type="text/javascript" src="script.js"></script>
+
     <!-- Script to Activate the Carousel -->
     <script>
         $('.carousel').carousel({
             interval: 5000 //changes the speed
         })
     </script>
-
 </body>
 
 </html>
