--- a/index.html
+++ b/index.html
@@ -81,11 +81,20 @@
                 <div class="col-lg-12">
                     <h2>Energy consumption by usage(end use)</h2>
                     <div id="graph2" style="width: 100%; min-height:600px"></div>
+                  <p>Form the grapt, we can see the Space Conditioning and the Lighting cause most energy consumption, as a result, we should make more effort on reduce energy usage form air conditioning and lighting.</p>
+                  
                 </div>
-
-
-                <p>Space Conditioning <br>* Lighting <br>* Save energy
-                </p>
+                <dir class="col-md-10">
+                    <p>Reference</p>
+                    <ul>
+                        <li>
+                            <a href="http://ar.hkbu.edu.hk/file/123">EXPLANATORY NOTES for HKBU GRADING SYSTEM</a>
+                        </li>
+                        <li>
+                            <a href="http://jsfiddle.net/c6WG8/8/">Code Example</a>
+                        </li>
+                    </ul>
+                </dir>
             </div>
         </div>
 
