--- a/index.html
+++ b/index.html
@@ -21,6 +21,38 @@
 </style>
 
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Carmen Chan</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="https://chlorella.github.io/homework3/">HW3</a>
+                    </li>
+                    <li>
+                        <a href="https://chlorella.github.io/homework4/">HW4</a>
+                    </li>
+                    <li>
+                        <a href="https://chlorella.github.io/homework5/">HW5</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
     <!-- Half Page Image Background Carousel Header -->
     <header id="myCarousel" class="carousel slide">
         <!-- Indicators -->
@@ -74,24 +106,70 @@
                     <div id="graph1" style="width: 100%; min-height:600px"></div>
                 </div>
                 <div class="col-lg-10">
-                    <p>From the graph, Major consumption source is Commercial within this 10 years. residiential is only the
-                        third sector.<br>As a result, other than encourage residient to reduce their energy use,maybe reduce
+                    <p> From the graph, Major consumption source is Commercial within this 10 years. residiential is only the
+                        third sector.<br> As a result, other than encourage residient to reduce their energy use,maybe reduce
                         the energy consumption of Commercial is more efficent.Laws or energy prices increasement may helps.</p>
                 </div>
                 <div class="col-lg-12">
                     <h2>Energy consumption by usage(end use)</h2>
                     <div id="graph2" style="width: 100%; min-height:600px"></div>
-                  <p>Form the grapt, we can see the Space Conditioning and the Lighting cause most energy consumption, as a result, we should make more effort on reduce energy usage form air conditioning and lighting.</p>
-                  
+                </div>
+                <div class="col-lg-10">
+                    <p> For Commercial, we can see resturant use up highers energy, it is not superising for it long working
+                        hours and use the energy for lighting and cooking. <br> For transportation, it is interesting to
+                        see the energy consumption of Car is over the energy consumption of bus. Also, we can see the rail
+                        is use less energy than other transportation, so we should encourge public to use more rail than
+                        bus to reduce the energy consumption.<br> Overall, we can see lighting and space conditioning cost
+                        much more energy than other source. As a result, we should play more effort to save energy in those
+                        criteria, here is some example.</p>
+                    <blockquote>
+                        <h4>Lighting</h4>
+                        <ul>
+                            <li>Switch lighting on only when you need it. </li>
+                            <li>Use daylight whenever possible. </li>
+                            <li>When buying new lighting, consider choosing compact fluorescent bulbs, which use 75% less energy
+                                than standard bulbs for the same amount of illumination. </li>
+                            <li>Place your lighting carefully where you need it. </li>
+                            <li>Use dimmers where possible (except for fluorescent lamps and compact fluorescent bulbs). </li>
+                            <li>Use non-opaque, light-coloured lamp shades. </li>
+                            <li>Keep light fixtures and lamps clean to maximise their efficiency. </li>
+                        </ul>
+                    </blockquote>
+
+                    <blockquote>
+                        <h4>Air Conditioning</h4>
+                        <ul>
+                            <li>When buying an air-conditioner, check its Energy Efficiency Ratio, with lower numbers denoting
+                                better efficiency. </li>
+                            <li>Avoid installing air-conditioners where they will be exposed to direct sunlight. </li>
+                            <li>Close off areas that do not require air-conditioning, and turn air-conditioners off in unoccupied
+                                rooms.
+                            </li>
+                            <li>Keep windows and doors shut when the air-conditioner is running.</li>
+                            <li>Place weather strips on doors and windows to prevent the leakage of cool air. </li>
+                            <li>Clean or replace the filters in all air-conditioners at the beginning of summer, and clean them
+                                every two weeks from then on.</li>
+                            <li>Set the temperature to an energy-efficient level so that you will feel comfortable rather than
+                                cold.
+                            </li>
+                            <li>Use fans instead of air-conditioning whenever possible.</li>
+                        </ul>
+                    </blockquote>
                 </div>
                 <dir class="col-md-10">
-                    <p>Reference</p>
+                    <h3>Reference</h3>
                     <ul>
                         <li>
-                            <a href="http://ar.hkbu.edu.hk/file/123">EXPLANATORY NOTES for HKBU GRADING SYSTEM</a>
+                            <a href="https://data.gov.hk/en-data/dataset/hk-emsd-emsd1-energy-end-use-data">Hong Kong Energy end use data(gov open data)</a>
                         </li>
                         <li>
-                            <a href="http://jsfiddle.net/c6WG8/8/">Code Example</a>
+                            <a href="http://gallery.echartsjs.com/explore.html?u=bd-1546969639&type=work#sort=rank~timeframe=all~author=all">Echart</a>
+                        </li>
+                        <li>
+                            <a href="https://startbootstrap.com/template-overviews/half-slider/">Half Sailder(CSS)</a>
+                        </li>
+                        <li>
+                            <a href="http://www.gov.hk/en/residents/environment/public/green/saveenergy.htm">Energy saving</a>
                         </li>
                     </ul>
                 </dir>
