--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h1>Hong Kong Energy Consumsion</h1>
                 </center>
                 <div class="col-lg-10">
-                    <p>Energy saving is a importance issue worldwide</p>
+                    <p>Energy saving is a important issue worldwide</p>
                     <p>Every country need to reduce energy use in order to reduce carbon dioxide, so it is also a importance
                         issue for Hong Kong.</p>
                     <p> To reduce energy consumption, understand what is the major sector to consume energy is a must.</p>
